Fix output path form artifact upload

--- a/.github/workflows/render_quarto.yml
+++ b/.github/workflows/render_quarto.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./_book
+          path: docs
 
   # Deployment job
   deploy:
