--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ project:
 website:
   title: "howto"
   navbar:
+    logo: logo_white.svg
     left:
       - href: index.qmd
         text: Home
@@ -24,7 +25,7 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme: [cosmo, epiversetheme.scss]
     css: styles.css
     toc: true
 
