--- a/.github/workflows/render_quarto.yml
+++ b/.github/workflows/render_quarto.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y libglpk40
+
       - uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: pre-release
